<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_theme_red_menu"
    android:baselineAligned="false"
    android:id="@+id/menu_layout"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Build"
        android:id="@+id/browser_webView_Header"
        android:textSize="12sp"
        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="298dp"
                android:layout_height="131dp"
                android:id="@+id/imageView"
                android:background="@drawable/icon_titlescreen1"
                android:layout_gravity="center"
                android:layout_margin="20dp" /><![CDATA[

            />
        ]]>
        </FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_button_newgame"
            android:id="@+id/menu_button"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_button_share"
            android:id="@+id/share_button"
            android:layout_gravity="center_horizontal" />

        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_button_settings"
            android:id="@+id/settings_button"
            android:layout_gravity="center_horizontal" />

        />


    </LinearLayout>

</LinearLayout>