<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/bg_theme_red_menu">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/register_page_title_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_title"
        android:layout_marginTop="50dp"
        android:text="@string/username_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_username"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_toEndOf="@+id/text_username"
        android:layout_toRightOf="@+id/text_username"
        android:ems="10"
        android:inputType="textPersonName">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_username"
        android:layout_alignLeft="@+id/text_username"
        android:layout_below="@+id/text_username"
        android:layout_marginTop="38dp"
        android:text="@string/name_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_name"
        android:layout_alignStart="@+id/edit_username"
        android:layout_alignLeft="@+id/edit_username"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_username"
        android:layout_alignLeft="@+id/text_username"
        android:layout_below="@+id/text_name"
        android:layout_marginTop="38dp"
        android:text="@string/email_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_email"
        android:layout_alignStart="@+id/edit_username"
        android:layout_alignLeft="@+id/edit_username"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_username"
        android:layout_alignLeft="@+id/text_username"
        android:layout_below="@+id/text_email"
        android:layout_marginTop="38dp"
        android:text="@string/phone_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_phone"
        android:layout_alignStart="@+id/edit_username"
        android:layout_alignLeft="@+id/edit_username"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_email"
        android:layout_alignLeft="@+id/text_email"
        android:layout_below="@+id/text_phone"
        android:layout_marginTop="38dp"
        android:text="@string/password_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_password"
        android:layout_alignStart="@+id/edit_username"
        android:layout_alignLeft="@+id/edit_username"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_layout"
        android:weightSum="1">

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_text" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:id="@+id/backButton" />

    </LinearLayout>

    <Button
        android:id="@+id/main_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_layout"
        android:text="@string/main_menu_button_text" />

</RelativeLayout>